--- a/index.css
+++ b/index.css
@@ -1,56 +1,83 @@
+html {
+    background: url("ice.jpeg") no-repeat center center;
+    min-height: 100%;
+    background-size: cover;
+    color: white;
+}
+
+* {
+    margin: 0;
+    padding: 0;
+}
+
 header {
-    overflow: hidden;
+    border-bottom: rgb(59, 61, 68) 2px solid;
+    background: rgba(82, 85, 94, 0.75);
+    border-radius: 8px;
 }
 
-.menu {
-    text-decoration: none;
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
+.menu ul {
+    list-style: none;
 }
 
-.menu > li > a {
-    text-decoration: none;
-    font-family: sans-serif;
-    color: #5757a0;
-    padding: 10px 20px;
+.menu > ul {
+    justify-content: left;
+    padding: 20px;
+    margin-bottom: 20px;
+}
+
+.menu > ul li {
     display: inline-block;
-    background-color: lavender;
-    border: 1px solid #5757a0;
-    min-width: 50px;
-    text-align: center;
-}
-
-.menu li {
+    position: relative;
     float: left;
+    min-width: 150px;
 }
 
-li ul.sub-menu {
+.menu > ul li:first-child {
+    border-left: darkorchid 1px solid;
+}
+
+.menu > ul li a {
+    display: block;
+    background: antiquewhite;
+    padding: 15px;
+    font-size: 14px;
     text-decoration: none;
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
+    text-transform: uppercase;
+    transition: all 0.3s ease;
 }
 
-li.top ul {
+.menu li a:hover {
+    background: darkgray;
+    transition: all 0.3s ease;
+}
+
+.menu li ul {
     display: none;
+    position: absolute;
+    min-width: 150px;
+
 }
 
-li.top:hover ul {
+.menu li > ul li {
+    border: darkorchid 1px solid;
+}
+
+.menu li > ul li a {
+    padding: 10px;
     text-decoration: none;
-    list-style-type: none;
+}
+
+.menu li:hover > ul {
     display: block;
 }
 
 .searchAnything {
     float: right;
+    padding-top: -40px;
 }
 
-li.top > ul > li a {
-    text-decoration: none;
-    min-width: 100px;
-    border: 5px solid blue;
-    height: 80px;
-    line-height: 30px;
-    padding: 10px;
+.clearfix {
+    clear: both;
 }
+
