--- a/index.css
+++ b/index.css
@@ -1,8 +1,24 @@
 html {
     background: url("ice.jpeg") no-repeat center center;
-    min-height: 100%;
+    height: 100%;
     background-size: cover;
     color: white;
+}
+
+body {
+    min-height: 100%;
+    background: url("ice.jpeg") no-repeat center center;
+}
+
+.wrapper {
+    min-height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.main {
+    padding: 30px;
+    flex: 1 1 auto;
 }
 
 * {
@@ -103,8 +119,7 @@ header {
 }
 
 article {
-    margin-top: 100px;
-    min-width: 150px;
+    margin-top: 40px;
     width: 800px;
     margin-left: auto;
     margin-right: auto;
@@ -125,7 +140,6 @@ article {
     border: rgb(59, 61, 68) 2px solid;
     background: rgba(70, 74, 83, 0.6);
     border-top-right-radius: 15px;
-    /*border-radius: 8px;*/
 }
 
 .cat p {
@@ -134,6 +148,12 @@ article {
     margin-bottom: 10px;
     color: rgb(47, 49, 55);
     font-weight: 550;
-    letter-spacing:0.8px;
+    line-height: 1.2em;
 }
 
+.footer {
+    background-color: red;
+    color: white;
+    text-align: center;
+    padding: 30px;
+}
