--- a/index.css
+++ b/index.css
@@ -1,13 +1,12 @@
 html {
-    background: url("ice.jpeg") no-repeat center center;
+    background: url("ice.jpeg") no-repeat center center fixed;
     height: 100%;
     background-size: cover;
     color: white;
 }
 
 body {
-    min-height: 100%;
-    background: url("ice.jpeg") no-repeat center center;
+    height: 100%;
 }
 
 .wrapper {
